# pythonCalcInterpret

./: LICENCE  README.md  setup.cfg
NikCalc/: intep.py
NiksCalculatorInterfaceingTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
