[metadata]
name = aesthetic_ascii
version = 0.0.1
author = Nik Nandi
author_email = nik.nandi.1@gmail.com
description = For Calcutation Interperatation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
Footer
© 2022 GitHub, Inc.
Footer navigation
Terms
Privac